fix: inline clipping on characters with Split Animate

--- a/src/components/SplitAnimate/index.module.scss
+++ b/src/components/SplitAnimate/index.module.scss
@@ -3,9 +3,11 @@
   overflow: hidden;
   min-height: 1.1em;
   margin-bottom: -1.1em;
+  margin-right: -2px;
 }
 
 .innerWord {
+  margin-right: 2px;
   display: inline-block;
   white-space: pre;
 }
